This file documents the revision history for Perl extension Gitalist.

   - Add a requires_external_bin for the git command.

0.001007 2010-05-15
    - Set the use_request_uri_for_path configuration variable to be compatible
      with Catalyst 5.80024.

0.001006 2010-05-13
    - Fix Catalyst::Action::REST dependency (there wasn't one previously)
    - Depend on latest Catalyst::View::TT due to a previous bad version
      breaking things.
    - Add render_die => 1 in the View::TT config as we do want real exceptions
      when we call ->render ourselves.

0.001005 2010-05-11
    - Depend on latest MX::Declare to fix issues for people who upgrade
      MooseX::Types::Structured to a newer version.
    - Add some padding below, so file icons are not chopped off
    - Updated favicon to cope with dark grey backgrounds

0.001004 2010-05-06
    - Remove unneeded dependencies:
      - XML::OPML::SimpleGen
      - XML::Atom
      - XML::RSS
    - Fixed author_* barewords in Makefile.PL so that users checking out from
      git without the author modules works correctly.

0.001003 2010-04-21
    - Added folder / file icons in tree view (Foxtons)
    - Added favicon
    - Fix for non uri_for hard coded links for running at not root locations.
      (RT#56747)

0.001002 2010-04-20
    - Fix link for the project_index action.
    - Add missing images to MANIFEST.

0.001001 2010-04-15
    - Bumping version number to a format I understand, thanks to mst for
      pointing me in the right direction and t0m for the new number.
    - Cleaned up the search results - removed search from the homepage as
      wasn't working (Foxtons).
    - Provide a link for an atom entry. switch mode=xml to type=xhtml (Brian
      Cassidy).

0.000006.1 2010-04-14
    - Documentation fixes for the --repo-dir flag (Dagfinn Ilmari Mannsåker).

0.000006 2010-04-10
    - Major frontend redesign, thanks to ranguard and the web designers at
      Foxtons for making this happen.